# Astra

./: .gitignore  Cargo.toml  README.md
known-bugs/: 01-array-index-assignment-unparseable.md  02-let-without-initializer-fails.md  03-nested-fn-overwrites-global.md  04-no-block-scoping.md  05-chained-method-writeback-lost.md  06-unclosed-block-comment.md  07-array-display-placeholder.md  08-range-dos-large-bounds.md  09-pattern-identifier-unreachable.md  10-header-order-violation-unreachable.md  11-bitwise-or-on-bool.md  12-typo-insertion-after-previus.md  README.md
src/: args.rs  main.rs
syntax/: syntax.astra
test/: 01_lex_unexpected_char.astra  02_lex_unterminated_string.astra  03_parse_missing_entry.astra  04_parse_entry_not_first.astra  05_parse_missing_semicolon.astra  06_parse_missing_closing_brace.astra  07_parse_invalid_assign_target.astra  08_parse_void_in_let.astra  09_parse_array_generic_syntax.astra  10_parse_unexpected_eof.astra  11_runtime_duplicate_function.astra  12_runtime_missing_entry_fn.astra  13_runtime_break_outside_loop.astra  14_runtime_continue_outside_loop.astra  15_runtime_undefined_variable.astra  16_runtime_let_type_mismatch.astra  17_runtime_let_no_init_type_check.astra  18_runtime_divide_by_zero.astra  19_runtime_modulo_by_zero.astra  20_runtime_invalid_binary_op.astra  21_runtime_invalid_type_comparison.astra  22_runtime_multiply_string_zero.astra  23_runtime_multiply_string_negative.astra  24_runtime_multiply_string_float.astra  25_runtime_string_subtraction.astra  26_runtime_assign_type_mismatch.astra  31_runtime_range_float.astra  (+44 more)
(+15 files in other folders)
